--- a/templates/components/media-player.html.twig
+++ b/templates/components/media-player.html.twig
@@ -1,35 +1,13 @@
 {% if sources.status is defined %}
-    <media-encoding-status {{ attributes }} previewImageUrl="{{ poster }}" status="{{ sources.status }}" processId="{{ sources.processId }}"  style="aspect-ratio: 16/9" />
+    <media-encoding-status {{ attributes }} previewImageUrl="{{ poster }}" status="{{ sources.status }}" processId="{{ sources.processId }}" />
 {% endif %}
 {% if sources.0 is defined %}
     <consent-wall {{ attributes }} previewImageUrl="{{ poster }}" requiredConsents="{{ consents|json_encode }}">
-    {% if sources.0.type == "video/vimeo" %}
-        <iframe class="vimeo-player"
-                src="{{ sources.0.src }}"
-                frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture"
-                style="position:absolute;
-                       top:0;
-                       left:0;
-                       width:100%;
-                       height:100%"></iframe>
-    {% elseif sources.0.type == "video/facebook" %}
-        <div class="fb-video"
-             data-href="{{ sources.0.src }}"
-             data-show-captions="true"
-             data-lazy="true"
-             data-width="1920"
-             data-height="1080"
-             data-allowfullscreen="true"
-             style="position:absolute;
-                    right:0;
-                    bottom: 0;
-                    top:0;
-                    left:0;
-                    width:100%;
-                    height:100%"></div>
+    {% if sources.0.type == "video/facebook" %}
+        <div class="fb-video" {{ attributes.only("class") }} data-href="{{ sources.0.src }}" data-show-captions="true" data-lazy="true" data-allowfullscreen="true" style="position:absolute; right:0; bottom: 0; top:0; left:0; width:100%; height:100%">
+        </div>
     {% else %}
-        <media-player>
+        <media-player {{ attributes.only("class") }}>
         {% if poster %}<media-poster class="vds-poster" src="{{ poster }}"></media-poster>{% endif %}
         <media-provider>
         {% for source in sources %}<source src="{{ source.src }}" type="{{ source.type }}" />{% endfor %}
